--- a/back/build.gradle
+++ b/back/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 	// H2 DB는 초기 용이한 테스트를 위한 DB로 추후 MySQL로 변경 예정
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	testImplementation 'org.springframework.security:spring-security-test'
