--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -27,8 +27,12 @@ spring:
 jwt:
   key:
     secret: ${JWT_SECRET_KEY}
-  access-token-expiration-minutes: 180
+  access-token-expiration-minutes: 1440
   refresh-token-expiration-minutes: 720
 logging:
   level:
     org.springframework.security: DEBUG
+server:
+  servlet:
+    encoding:
+      force-response: true
