--- a/back/build.gradle
+++ b/back/build.gradle
@@ -36,7 +36,8 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.10.1'
 	compileOnly 'org.projectlombok:lombok'
 	// H2 DB는 초기 용이한 테스트를 위한 DB로 추후 MySQL로 변경 예정
-	runtimeOnly 'com.h2database:h2'
+	// runtimeOnly 'com.h2database:h2'
+	implementation 'mysql:mysql-connector-java:8.0.32'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
