--- a/back/src/main/resources/application-server.yml
+++ b/back/src/main/resources/application-server.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:{MY_PORT#}/{MY_SCHEMA_NAME}?useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/lengthtest?useSSL=false
     username: root
-    password: ${MY_MYSQL_DB_PASSWORD}
+    password: 1234
     driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQL5Dialect
