--- a/back/src/main/resources/application-test.yml
+++ b/back/src/main/resources/application-test.yml
@@ -1,29 +1,18 @@
-#spring:
-#  h2:
-#    console:
-#      enabled: true
-#      path: /h2
-#  datasource:
-#    url: jdbc:h2:mem:test
-#  jpa:
-#    hibernate:
-#      ddl-auto: create
-#    show-sql: true
-
 spring:
-  h2:
-    console:
-      enabled: true
-      path: /h2
   datasource:
-    url: jdbc:h2:mem:test
-    driverClassName: org.h2.Driver
+    url: jdbc:mysql://127.0.0.1:3306/lengthtest?useSSL=false
+    username: root
+    password: 1234
+    driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate:
-      ddl-auto: create  # 연관관계 매핑에 따른 DB 자동생성. 앱을 껐다 키면 리셋되어 새로 생성됨. ddl-auto: update 로 할 시 데이터가
+      ddl-auto: update  # 연관관계 매핑에 따른 DB 자동생성. 앱을 껐다 키면 리셋되어 새로 생성됨. ddl-auto: update 로 할 시 데이터가
       # 휘발되지 않고 남음
     show-sql: true      # 인텔리제이 로그에 SQL 쿼리문을 띄움. 쿼리가 어떻게 실행되는지 추적할 수 있음.
+    properties:
+      hibernate:
+        format_sql: true
 jwt:
   key:
     secret: ${JWT_SECRET_KEY}
