[fix] 수정사항 추가

--- a/back/src/main/resources/application-server.yml
+++ b/back/src/main/resources/application-server.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://seb-44-pre-032-db.ca8tk2sxqcth.ap-northeast-2.rds.amazonaws.com:{MY_MYSQL_DB_PORT_NUMBER}/{MY_MYSQL_DB_SCHEMA_TITLE}?useSSL=false
-    username: admin
-    password: ${MY_MYSQL_DB_PASSWORD}
+    url: jdbc:mysql://localhost:3306/so_clone?useSSL=false
+    username: root
+    password: db1234
     driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQL5Dialect
@@ -15,6 +15,13 @@ spring:
         format_sql: true
 jwt:
   key:
-    secret: ${JWT_SECRET_KEY}
+#    secret: kevin12341234123412341234123412341234
   access-token-expiration-minutes: 1440
   refresh-token-expiration-minutes: 720
+logging:
+  level:
+    org.springframework.security: DEBUG
+server:
+  servlet:
+    encoding:
+      force-response: true
